removing silent logging