@@ -1,2 +1,3 @@
 export M2_HOME=/usr/local/maven
 export PATH=${M2_HOME}/bin:${PATH}
+export MAVEN_OPTS="-Xms1024m -Xmx4096m -XX:PermSize=1024m"
